force-app/main/default/objects/Account/fields/Amount_Until_Next_Tier__c.field-meta.xml
<CustomField>
    <fullName>Amount_Until_Next_Tier__c</fullName>
    <label>Amount Until Next Tier</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>IF(
 Total_Spending__c &lt; $CustomMetadata.Support_Tier__mdt.Bronze.Minimum_Spending__c,
 $CustomMetadata.Support_Tier__mdt.Bronze.Minimum_Spending__c - Total_Spending__c,
 IF(
  Total_Spending__c &lt; $CustomMetadata.Support_Tier__mdt.Silver.Minimum_Spending__c,
  $CustomMetadata.Support_Tier__mdt.Silver.Minimum_Spending__c - Total_Spending__c,
  IF(
   Total_Spending__c &lt; $CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c,
   $CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c - Total_Spending__c,
   0
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>