force-app/main/default/objects/Account/validationRules/Revenue_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Revenue_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Support_Tier__c, "Gold") &amp;&amp;
AnnualRevenue &lt; 20 * $CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c</errorConditionFormula>
    <errorMessage>Annual revenue is less than 20 times the minimum spending amount of the Gold support tier</errorMessage>
</ValidationRule>